2003-03-24  Daiki Ueno <ueno@unixuser.org>

	* [w3m-dev 03828] possible typo in nextA
	* main.c (nextA): fix typo?

2003-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03827] Re: checking for GC_version... no
	* configure.in: add dl for extlibs

2003-03-20  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03825] re-anchor for fold line
	* anchor.c (reAnchorPos): fix for fold line

2003-03-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00910] Re: autoconf: env MAKE not respected
	* Makefile.in (SET_MAKE): added
		(SHELL): added

2003-03-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00908] Re: autoconf: --without-migemo is a nop
	* acinclude.m4 (AC_W3M_MIGEMO): dont define USE_MIGEMO 
				when with_migemo=no

2003-03-14  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03823] Re: etc.c: treatment for "%7E" is added to  expandName()
	* url.c (parseURL2): file unquote
	* etc.c (expandName): revert previous changes

2003-03-14  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03822] Re: etc.c: treatment for "%7E" is added to  expandName()
	* etc.c (expandName): rewrite with strncasecmp

2003-03-14  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03821] fix for pmake
	* Makefile.in: use $(srcdir)/... instead of $<

2003-03-13  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>

	* etc.c: treatment for "%7E" is added to  expandName()

2003-03-13  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03819] support cd build && ../configure
	* Makefile.in: add VPATH
			add MV
			use $(top_srcdir), $<, $@
	* acinclude.m4 (AC_W3M_VERSION): use $srcdir
	* configure.in (AC_W3M_VERSION): move
	* mktable.c (main): basename

2003-03-13  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Makefile.in (distclean): added

2003-03-13  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03818] fix autoconf
	* Makefile.in (CGIBIN_DIR): added
		(AUXBIN_DIR): added
		(HELP_DIR): added
		(RC_DIR): added
		(MAKE_ARGS): added
		(TARGET): use $(package)